Changed Home Page styles

--- a/apps/website/templates/website/pages/home_page.html
+++ b/apps/website/templates/website/pages/home_page.html
@@ -19,18 +19,18 @@
             <div class="container md:h-screen mx-auto flex flex-col">
 
                 {# -------- Logo image -------- #}
-                <img class="max-w-fit max-h-20 md:max-h-36 lg:max-h-44 xl:max-h-52 self-start
-                mx-2 mt-10 lg:mt-0
-                translate-y-8 md:translate-y-12 lg:translate-y-24 xl:translate-y-32"
+                <img class="max-w-fit max-h-20 md:max-h-36 lg:max-h-44 xl:max-h-52 self-start z-20
+                            mx-2 mt-10 lg:mt-0
+                            translate-y-8 md:translate-y-12 lg:translate-y-24 xl:translate-y-32"
                      src="{% if cms_base.logo %} {{ cms_base.logo.url }}{% else %} {% static 'img/Logo.svg' %} {% endif %}"
                      alt="Developer logo">
 
                 {# -------- Glass Card -------- #}
                 <div class="text-gray-800
                             m-5 ml-14 p-5 rounded-xl
-                            md:max-w-sm md:translate-x-8 md:
-                            lg:max-w-lg lg:translate-x-28 lg:
-                            xl:max-w-2xl xl:translate-x-36 xl:
+                            md:max-w-sm md:translate-x-8
+                            lg:max-w-lg lg:translate-x-28
+                            xl:max-w-[41rem] xl:translate-x-36
                             bg-gray-300 bg-opacity-30 backdrop-filter backdrop-blur-lg border border-white-100">
                     <p class="bg-white rounded-xl px-3 py-2
                     font-extrabold md:text-xl lg:text-2xl xl:text-3xl">
@@ -40,8 +40,8 @@
                             Hi! here @developer
                         {% endif %}
                     </p>
-                    <p class="mt-3 font-bold text-white
-                    md:text-lg ltg:text-xl xl:text-2xl">
+                    <p class="mt-3 font-bold text-white drop-shadow-md
+                    md:text-lg lg:text-xl xl:text-2xl">
                         {% if cms_home.card_body %}
                             {{ cms_home.card_body|safe }}
                         {% else %}
@@ -50,8 +50,9 @@
                             I focus on
                             <span class="typed"
                                   data-typed-items="
-                              backend with <span class='font-extrabold bg-emerald-700 text-white px-2 py-1 rounded-lg'>Python</span>,
-                              frontend with <span class='font-extrabold bg-amber-500 text-white px-2 py-1 rounded-lg'>Javascript</span>"></span>
+                              <span class='font-extrabold bg-cyan-700 text-white px-2 py-0.5 rounded-lg'>Python</span> as programming language.,
+                              backend with <span class='font-extrabold bg-emerald-700 text-white px-2 py-0.5 rounded-lg'>Django</span>.,
+                              frontend with <span class='font-extrabold bg-amber-500 text-white px-2 py-0.5 rounded-lg'>Javascript</span>."></span>
                         {% endif %}
                     </p>
                 </div>
