--- a/apps/website/templates/website/components/flowbite/modal_contact_success.html
+++ b/apps/website/templates/website/components/flowbite/modal_contact_success.html
@@ -1,3 +1,5 @@
+{# ! DYNAMIC FLOWBITE COMPONENT - Requires Flowbite #}
+
 {# LOAD PACKAGES/TAGs #}
 {% load static %}
 {% load i18n %}
@@ -22,9 +24,9 @@
                         background="transparent"
                         autoplay speed="1"
                 ></lottie-player>
-                <h3 class="text-xl font-bold text-gray-800">{% translate "Message sent" %}</h3>
+                <h3 class="text-xl font-bold text-gray-800">{% translate "Your message has been sent" %}</h3>
                 <h3 class="mb-5 text-lg font-normal text-gray-500">
-                    {% translate "Thanks for contacting me." %}
+                    {% translate "Thank you for reaching out. I'll be in touch soon." %}
                 </h3>
                 <button type="button" class="close-modal px-10 py-2 rounded-lg border border-gray-200
                         text-sm font-medium  text-gray-500 bg-white
