--- a/apps/website/templates/website/components/icon_header.html
+++ b/apps/website/templates/website/components/icon_header.html
@@ -2,8 +2,7 @@
 
 {% comment %}
 PARAMETERS
-- templates:
-    - icon_name:str --> fontawesome name of representative icon for the section, ex:"fa-solid fa-laptop-code"
+    * icon_name:str --> fontawesome name of representative icon for the section, ex:"fa-solid fa-laptop-code"
 {% endcomment %}
 
 {# LOAD PACKAGES/TAGs #}
