--- a/apps/website/templates/website/components/flowbite/base_navbar.html
+++ b/apps/website/templates/website/components/flowbite/base_navbar.html
@@ -14,14 +14,14 @@ PARAMETERS
 <nav id="navbar"
      class="w-screen md:h-16 px-3 py-2.5 fixed top-0 z-30
               bg-transparent
-              font-bold text-xl text-white drop-shadow-md
+              font-bold text-lg text-white drop-shadow-md
               transition-[background-color] ease-in-out duration-300">
 
     <div class="container h-full flex flex-wrap items-center mx-auto    ">
         {# -------- Developer link -------- #}
-        <a href="/" class="flex-1 flex items-center min-w-min">
-            <span class="self-center">{{ cms_base.brand }}</span>
-        </a>
+        <div class="flex-1 flex items-center min-w-fit">
+            <a href="{% url 'website:home' %}"><span class="self-center">{{ cms_base.brand }}</span></a>
+        </div>
         <div class="flex items-center gap-x-3 md:order-2 md:flex-1 md:min-w-min md:justify-end ">
             {# -------- Social links -------- #}
             <a href="{{ cms_base.github }}"
