--- a/apps/website/templates/website/components/section_subtitle.html
+++ b/apps/website/templates/website/components/section_subtitle.html
@@ -8,22 +8,23 @@ PARAMETERS
 {% load compress %}
 
 {# * -------------------------------- CONTENT -------------------------------- #}
-<div class="section-title relative w-fit px-10 pb-2 mb-10 mx-auto normal-case ">
-    <h1><span class="text-2xl md:text-3xl font-extrabold text-center
-                bg-clip-text text-transparent bg-gradient-to-r from-indigo-700 to-blue-700">
+<div class="section-subtitle relative pb-2 mb-10 normal-case">
+    <h1><span class="text-xl font-bold
+                bg-clip-text text-transparent bg-indigo-700">
         {{ section_title }}</span></h1>
 </div>
 
 {# * --------------------------------- STYLES -------------------------------- #}
 {% compress css %}
     <style>
-        .section-title::before {
+        .section-subtitle h1::before {
             content: "";
             position: absolute;
             left: 0;
             bottom: 2px;
             height: 1px;
-            width: 100%;
+            width: 95%;
+            max-width: 255px;
             background-color: rgb(45, 38, 245);
         }
     </style>
