--- a/apps/website/templates/website/pages/home_page.html
+++ b/apps/website/templates/website/pages/home_page.html
@@ -12,66 +12,128 @@
     <!------------------------------------------------------------------------------
     Home Page
     -------------------------------------------------------------------------------->
-    <section class="w-full min-h-screen md:h-screen relative flex flex-col justify-between">
+    <section class="container mx-auto">
 
-        {# -------- Card -------- #}
-        <div class="md:absolute md:inset-0 z-10">
-            <div class="container md:h-screen mx-auto flex flex-col">
+        {# * ------------------------ PROFILE PRESENTATION ------------------------ #}
+        <div class="w-full md:h-[500px] pt-20 flex flex-col md:flex-row overflow-y-clip">
+
+            {# -------- Card -------- #}
+            <div class="basis-full md:basis-2/3 self-center flex flex-row justify-center md:justify-end">
 
                 {# -------- Logo image -------- #}
-                <img class="max-w-fit max-h-20 md:max-h-36 lg:max-h-44 xl:max-h-52 self-start z-20
-                            mx-2 mt-10 lg:mt-0
-                            translate-y-8 md:translate-y-12 lg:translate-y-24 xl:translate-y-32"
-                     src="{% if cms_base.logo %} {{ cms_base.logo.url }}{% else %} {% static 'img/Logo.svg' %} {% endif %}"
+                <img class="max-h-20 lg:max-h-24 xl:max-h-32"
+                     src="{% if cms_base.logo %}
+                         {{ cms_base.logo.url }}{% else %} {% static 'img/Logo.svg' %} {% endif %}"
                      alt="Developer logo">
 
                 {# -------- Glass Card -------- #}
-                <div class="text-gray-800
-                            m-5 ml-14 p-5 rounded-xl
-                            md:max-w-sm md:translate-x-8
-                            lg:max-w-lg lg:translate-x-28
-                            xl:max-w-[41rem] xl:translate-x-36
-                            bg-gray-300 bg-opacity-30 backdrop-filter backdrop-blur-lg border border-white-100">
-                    <p class="bg-white rounded-xl px-3 py-2
-                    font-extrabold md:text-xl lg:text-2xl xl:text-3xl">
-                        {% if cms_home.card_title %}
-                            {{ cms_home.card_title|safe }}
-                        {% else %}
-                            Hi! here @developer
-                        {% endif %}
-                    </p>
-                    <p class="mt-3 font-bold text-white drop-shadow-md
-                    md:text-lg lg:text-xl xl:text-2xl">
-                        {% if cms_home.card_body %}
-                            {{ cms_home.card_body|safe }}
-                        {% else %}
-                            My name is John Doe , a Full-Stack web developer.
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, optio. <br>
-                            I focus on
-                            <span class="typed"
-                                  data-typed-items="
-                              <span class='font-extrabold bg-cyan-700 text-white px-2 py-0.5 rounded-lg'>Python</span> as programming language.,
-                              backend with <span class='font-extrabold bg-emerald-700 text-white px-2 py-0.5 rounded-lg'>Django</span>.,
-                              frontend with <span class='font-extrabold bg-amber-500 text-white px-2 py-0.5 rounded-lg'>Javascript</span>."></span>
-                        {% endif %}
-                    </p>
-                </div>
+                {% with card_title=cms_home.card_title card_body=cms_home.card_body btn_icon_name="fa-solid fa-user-astronaut" %}
+                    {% url 'website:about' as btn_url %}
+                    {% translate "Know about me" as btn_text %}
+                    {% include "website/components/card_glass.html" %}
+                {% endwith %}
 
             </div>
-        </div>
 
-        {# -------- Dev Photo -------- #}
-        <div class="w-full md:absolute md:inset-0">
-            <picture class="container md:h-screen mx-auto flex justify-center items-end overflow-hidden
-                                md:h-screen md:justify-end md:overflow-visible">
+            {# -------- Dev Photo -------- #}
+            <picture class="basis-full md:basis-1/3 flex justify-center md:justify-start items-end">
                 <!-- load webp if supported, otherwise load png-->
                 <source srcset="{% if cms_home.dev_photo_webp %}{{ cms_home.dev_photo_webp.url }}
-                    {% else %}{% static 'img/developer.webp' %} {% endif %}" type="image/webp">
-                <img class="max-w-fit h-96 md:h-5/6 drop-shadow-[-30px_35px_35px_rgba(0,0,0,0.5)]"
+                            {% else %}{% static 'img/developer.webp' %} {% endif %}" type="image/webp">
+                <img class="max-w-fit h-96 md:h-full drop-shadow-[-30px_35px_35px_rgba(0,0,0,0.5)]"
                      src="{% if cms_home.dev_photo %} {{ cms_home.dev_photo.url }}
-                         {% else %}{% static 'img/developer.png' %} {% endif %}" alt="developer image">
+                                 {% else %}{% static 'img/developer.png' %} {% endif %}" alt="developer image">
             </picture>
+
         </div>
 
+
+        {# * ------------------------ HOMEPAGE CONTENT ------------------------ #}
+
+        {# -------- Skills -------- #}
+        <div class="container mx-auto py-10 px-10 md:px-20
+                    grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8
+                    bg-blue-900 rounded-t-xl shadow-2xl">
+
+            {% if cms_home.service_set.count >= 1 %}
+                {% for service in cms_home.service_set.all %}
+                    <div class="flex flex-row items-center gap-2 basis-full md:basis-1/2 lg:basis-1/4">
+                        <div class="w-16 h-16 mr-1 p-5 flex justify-center items-center rounded-full bg-indigo-700
+                                    text-3xl text-white">
+                            <i class="{{ service.fa_icon }}"></i>
+                        </div>
+                        <p class="text-white">
+                            <span class="font-bold text-white
+                                    md:text-md lg:text-lg xl:text-xl">{{ service.title }}</span><br>
+                            {{ service.description }}
+                        </p>
+                    </div>
+                {% endfor %}
+            {% else %}
+                {# ! Placeholder skills #}
+                {% with "shield-halved gears code bug code-compare laptop-code" as icons %}
+                    {% for icon in  icons.split %}
+                        <div class="flex flex-row items-center gap-2 basis-full md:basis-1/2 lg:basis-1/4">
+                            <div class="w-16 h-16 mr-1 p-5 flex justify-center items-center rounded-full bg-indigo-700
+                                    text-3xl text-white">
+                                <i class="fa-solid fa-{{ icon }}"></i>
+                            </div>
+                            <p class="text-white">
+                            <span class="font-bold text-white
+                                    md:text-md lg:text-lg xl:text-xl">Some Skill</span><br>
+                                Lorem ipsum dolor sit amet, con sect etur adipisicing elit.
+                            </p>
+                        </div>
+                    {% endfor %}
+                {% endwith %}
+            {% endif %}
+        </div>
+
+        {# -------- Main content -------- #}
+        <section class="container mx-auto mb-10 px-5 md:px-10 lg:px-20 py-10 rounded-b-xl bg-white shadow-xl">
+
+            {# ---- Latest Projects ---- #}
+            {# Title #}
+            {% translate "My latest projects" as latest_projects_title %}
+            {% include 'website/components/section_title.html' with section_title=latest_projects_title %}
+            {# Project Cards #}
+            {% include 'website/components/project_cards.html' with cms_projects=cms_projects %}
+            <div class="my-10 mb-24 flex justify-center items-center">
+                {% with "fa-solid fa-laptop-code" as icon_name %}
+                    {% url 'website:projects' as url %}
+                    {% translate "Explore projects" as text %}
+                    {% include "website/components/button_icon_gradient.html" %}
+                {% endwith %}
+            </div>
+
+            {# ---- Contact Section ---- #}
+            {# Title #}
+            {% translate "Let's talk!" as contact_form_title %}
+            {% include 'website/components/section_title.html' with section_title=contact_form_title %}
+            {# Contact #}
+            {% if cms_home.contact_msg %}
+                <div class="max-w-2xl mx-auto my-10 text-center text-xl font-medium">
+                    <p>{{ cms_home.contact_msg | safe }}</p>
+                </div>
+            {% else %}
+                {# ! Placeholder message #}
+                <div class="max-w-xl mx-auto my-10 text-center text-xl font-medium">
+                    <p>
+                        {% translate "Interested in starting a new project or collaborating? Tell me and let's do great things together." %}
+                    </p>
+                </div>
+            {% endif %}
+            <div class="my-10 flex justify-center items-center">
+                {% with "fa-solid fa-paper-plane" as icon_name %}
+                    {% url 'website:contact' as url %}
+                    {% translate "Get it touch" as text %}
+                    {% include "website/components/button_icon_gradient.html" %}
+                {% endwith %}
+            </div>
+
+        </section>
+
+
     </section>
+
 {% endblock %}
