Add priority order to Service model

--- a/apps/website/templates/website/components/flowbite/lang_selector.html
+++ b/apps/website/templates/website/components/flowbite/lang_selector.html
@@ -17,12 +17,12 @@
      class="language-selector">
 
     <button id="langSelectorDropdownButton" data-dropdown-toggle="langSelectorDropdownMenu"
-            class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-gray-900
+            class="inline-flex items-center py-2 px-3 text-sm font-medium text-center
             text-white border-b border-b-transparent
             hover:border-white hover:drop-shadow-lg
             focus:border-white focus:drop-shadow-lg"
             type="button">
-        <p><i class="fa-solid fa-earth-americas fa-lg"></i>
+        <p><i class="fa-solid fa-earth-americas fa-lg "></i>
             <i class="fa-solid fa-chevron-down fa-md mr-0.5"></i></p>
     </button>
 
