--- a/apps/website/templates/website/pages/home_page.html
+++ b/apps/website/templates/website/pages/home_page.html
@@ -57,7 +57,7 @@
 
             {% if cms_home.service_set.count >= 1 %}
                 {% for service in cms_home.service_set.all %}
-                    <div class="flex flex-row items-center gap-2 basis-full md:basis-1/2 lg:basis-1/4">
+                    <div class="flex flex-col items-start gap-x-2 gap-y-4 basis-full md:basis-1/2 lg:basis-1/4">
                         <div class="w-16 h-16 mr-1 p-5 flex justify-center items-center rounded-full bg-indigo-700
                                     text-3xl text-white">
                             <i class="{{ service.fa_icon }}"></i>
@@ -73,7 +73,7 @@
                 {# ! Placeholder skills #}
                 {% with "shield-halved gears code bug code-compare laptop-code" as icons %}
                     {% for icon in  icons.split %}
-                        <div class="flex flex-row items-center gap-2 basis-full md:basis-1/2 lg:basis-1/4">
+                        <div class="flex flex-col items-start gap-x-2 gap-y-4 basis-full md:basis-1/2 lg:basis-1/4">
                             <div class="w-16 h-16 mr-1 p-5 flex justify-center items-center rounded-full bg-indigo-700
                                     text-3xl text-white">
                                 <i class="fa-solid fa-{{ icon }}"></i>
