Added project title and technologies to details page

--- a/apps/website/templates/website/components/resume.html
+++ b/apps/website/templates/website/components/resume.html
@@ -7,7 +7,8 @@ PARAMETERS
 {% load i18n %}
 
 {# * -------------------------------- CONTENT ------------------------------- #}
-<div class="grid grid-cols-1 md:grid-cols-2 ">
+<div class="grid grid-cols-1 md:grid-cols-2 gap-x-5">
+
     <div class="w-full max-w-md">
         <h2 class="mb-2 text-xl font-medium">{% translate "Professional Experience" %}</h2>
 
