--- a/apps/website/templates/website/components/section_title.html
+++ b/apps/website/templates/website/components/section_title.html
@@ -8,7 +8,7 @@ PARAMETERS
 {% load compress %}
 
 {# * -------------------------------- CONTENT -------------------------------- #}
-<div class="section-title relative w-fit px-10 pb-2 mb-10 mx-auto normal-case ">
+<div class="section-title relative w-fit px-10 pb-2 mx-auto normal-case ">
     <h1><span class="text-2xl md:text-3xl font-extrabold text-center
                 bg-clip-text text-transparent bg-gradient-to-r from-indigo-700 to-blue-700">
         {{ section_title }}</span></h1>
