--- a/apps/website/templates/website/pages/contact_page.html
+++ b/apps/website/templates/website/pages/contact_page.html
@@ -43,13 +43,10 @@
                 </div>
 
                 <div class="max-w-sm mt-8 object-contain ">
-                    <video id="send-email-animation" autoplay loop muted playsinline>
+                    <video class="autoplay-video" autoplay loop muted playsinline>
                         <source src="{% static "img/animations/send_email.webm" %}" type="video/webm">
                         <source src="{% static "img/animations/send_email.mp4" %}" type="video/mp4">
                     </video>
-                    <script type="text/javascript">
-                        document.getElementById("send-email-animation").play();
-                    </script>
                 </div>
             </div>
 
