Fix title for about page

--- a/apps/website/templates/website/pages/about_page.html
+++ b/apps/website/templates/website/pages/about_page.html
@@ -5,7 +5,7 @@
 {% load i18n %}
 
 {# Website title #}
-{% block title %}{% translate "Home" %} | {{ block.super }}{% endblock %}
+{% block title %}{% translate "About" %} | {{ block.super }}{% endblock %}
 
 {# -------------------------------- WEBPAGE CONTENT -------------------------------- #}
 {% block main-content %}
