--- a/apps/website/templates/website/base.html
+++ b/apps/website/templates/website/base.html
@@ -112,6 +112,7 @@
             class="w-full h-screen bg-gradient-to-r from-violet-500 to-sky-500"></canvas>
 
     {# -------- Clip Path-------- #}
+    <div class="w-full h-screen absolute top-0 background-blue-clip-path"></div>
     <div class="w-full h-screen absolute top-0 background-clip-path"></div>
 
     {# ------- Main content ------- #}
