--- a/apps/website/templates/website/pages/home_page.html
+++ b/apps/website/templates/website/pages/home_page.html
@@ -53,7 +53,7 @@
         {# -------- Skills -------- #}
         <div class="container mx-auto py-10 px-10 md:px-20
                     grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8
-                    bg-blue-900 rounded-t-xl shadow-2xl">
+                    bg-blue-900 rounded-t-xl shadow-2xl border border-gray-500">
 
             {% if cms_home.service_set.count >= 1 %}
                 {% for service in cms_home.service_set.all %}
